--- a/ExpenseIt/ExpenseItHome.xaml
+++ b/ExpenseIt/ExpenseItHome.xaml
@@ -9,6 +9,36 @@
       Title="ExpenseIt - Home">
 
     <Grid Margin="10,0,10,10">
+        <Grid.Resources>
+            <!-- Expense Report Data -->
+            <XmlDataProvider x:Key="ExpenseDataSource" XPath="Expenses">
+                <x:XData>
+                    <Expenses xmlns="">
+                        <Person Name="Mike" Department="Legal">
+                            <Expense ExpenseType="Lunch" ExpenseAmount="50" />
+                            <Expense ExpenseType="Transportation" ExpenseAmount="50" />
+                        </Person>
+                        <Person Name="Lisa" Department="Marketing">
+                            <Expense ExpenseType="Document printing" ExpenseAmount="50"/>
+                            <Expense ExpenseType="Gift" ExpenseAmount="125" />
+                        </Person>
+                        <Person Name="John" Department="Engineering">
+                            <Expense ExpenseType="Magazine subscription" ExpenseAmount="50"/>
+                            <Expense ExpenseType="New machine" ExpenseAmount="600" />
+                            <Expense ExpenseType="Software" ExpenseAmount="500" />
+                        </Person>
+                        <Person Name="Mary" Department="Finance">
+                            <Expense ExpenseType="Dinner" ExpenseAmount="100" />
+                        </Person>
+                    </Expenses>
+                </x:XData>
+            </XmlDataProvider>
+
+            <DataTemplate x:Key="nameItemTemplate">
+                <Label Content="{Binding XPath=@Name}"/>
+            </DataTemplate>
+        </Grid.Resources>
+        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="230" />
             <ColumnDefinition />
@@ -26,13 +56,13 @@
         <Border Grid.Column="1" Grid.Row="1" Style="{StaticResource listHeaderStyle}">
             <Label Style="{StaticResource listHeaderTextStyle}">Names</Label>
         </Border>
-        
-        <ListBox Name="peopleListBox" Grid.Column="1" Grid.Row="2">
-            <ListBoxItem>Mike</ListBoxItem>
-            <ListBoxItem>John</ListBoxItem>
-            <ListBoxItem>Pippo</ListBoxItem>
-            <ListBoxItem>Pluto</ListBoxItem>
-            <ListBoxItem>Paperino</ListBoxItem>
+
+        <ListBox 
+            Name="peopleListBox" 
+            Grid.Column="1" 
+            Grid.Row="2" 
+            ItemsSource="{Binding Source={StaticResource ExpenseDataSource}, XPath=Person}" 
+            ItemTemplate="{StaticResource nameItemTemplate}">
         </ListBox>
 
         <Button Grid.Column="1" Grid.Row="3" Style="{StaticResource buttonStyle}" Click="Button_Click">View</Button>
