--- a/ExpenseIt/ExpenseReportPage.xaml
+++ b/ExpenseIt/ExpenseReportPage.xaml
@@ -9,17 +9,7 @@
       Title="ExpenseIt - View Expense">
 
     <Grid>
-        <Grid.Resources>
-            <!-- Reason item template -->
-            <DataTemplate x:Key="typeItemTemplate">
-                <Label Content="{Binding XPath=@ExpenseType}"/>
-            </DataTemplate>
-            <!-- Amount item template -->
-            <DataTemplate x:Key="amountItemTemplate">
-                <Label Content="{Binding XPath=@ExpenseAmount}"/>
-            </DataTemplate>
-        </Grid.Resources>
-        
+
         <Grid.Background>
             <ImageBrush ImageSource="watermark.png" />
         </Grid.Background>
@@ -49,21 +39,21 @@
 
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="0" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Name:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@Name}"></Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding Name}"></Label>
             </StackPanel>
 
             <!-- Department -->
             <StackPanel Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="1" Orientation="Horizontal">
                 <Label Style="{StaticResource labelStyle}">Department:</Label>
-                <Label Style="{StaticResource labelStyle}" Content="{Binding XPath=@Department}"></Label>
+                <Label Style="{StaticResource labelStyle}" Content="{Binding Department}"></Label>
             </StackPanel>
 
             <Grid Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" VerticalAlignment="Top" HorizontalAlignment="Left">
                 <!-- Expense type and Amount table -->
-                <DataGrid ItemsSource="{Binding XPath=Expense}" ColumnHeaderStyle="{StaticResource columnHeaderStyle}" AutoGenerateColumns="False" RowHeaderWidth="0" >
+                <DataGrid Name="ExpenseGrid" ColumnHeaderStyle="{StaticResource columnHeaderStyle}" AutoGenerateColumns="False" RowHeaderWidth="0" >
                     <DataGrid.Columns>
-                        <DataGridTextColumn Header="ExpenseType" Binding="{Binding XPath=@ExpenseType}"  />
-                        <DataGridTextColumn Header="Amount" Binding="{Binding XPath=@ExpenseAmount}" />
+                        <DataGridTextColumn Header="ExpenseType" Binding="{Binding ExpenseType}"  />
+                        <DataGridTextColumn Header="Amount" Binding="{Binding ExpenseAmount}" />
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
